# soundboard

./: README.md  index.html  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: settings.js  sound-manager.js  styles.css
src/components/: AddSoundButton.vue  InputDeviceDropdown.vue  SoundButton.vue  SoundContextMenu.vue  SpeakerButton.vue  ThemeButton.vue  Titlebar.vue
src/store/: store.ts
